correctifs normalisation des notebooks des loaders

--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -13,7 +13,6 @@
     "## Overview\n",
     "### Integration details\n",
     "\n",
-    "\n",
     "| Class | Package | Local | Serializable | JS support|\n",
     "| :--- | :--- | :---: | :---: |  :---: |\n",
     "| [PDFMinerLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PDFMinerLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ |   \n",
@@ -24,7 +23,7 @@
     "\n",
     "| Source | Document Lazy Loading | Native Async Support | Thread Safe | Extract Titles | Extract Images | Extract Tables | Extract Lists | Handle Page Header/Footer | Identify Page Break |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
-    "| PDFMinerLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ❌ | ✅ | ✅ | ✅ |\n",
+    "| PDFMinerLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ❌ | ✅ | ❌ | ❌ |\n",
     "\n",
     "<br>\n",
     "\n",
@@ -54,6 +53,15 @@
    ],
    "outputs": [],
    "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Installation\n",
+    "\n",
+    "Install **langchain_community**."
+   ]
   },
   {
    "metadata": {
@@ -97,17 +105,13 @@
    "cell_type": "code",
    "source": [
     "from patch_langchain_community.document_loaders import PDFMinerLoader\n",
-    "loader = PDFMinerLoader(\n",
-    "    \"./example_data/layout-parser-paper.pdf\",\n",
-    ")"
+    "\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
+    "loader = PDFMinerLoader(file_path)\n",
+    "## Load"
    ],
    "outputs": [],
    "execution_count": 11
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## Load"
   },
   {
    "metadata": {
@@ -1156,11 +1160,6 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": ""
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": "## Extract images from the PDF in *html* format (could also be *markdown* or *text*) with rapid OCR: "
   },
   {
@@ -1440,7 +1439,7 @@
     "from getpass import getpass\n",
     "\n",
     "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = getpass()\n"
+    "    os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API key =\")"
    ],
    "outputs": [],
    "execution_count": 22
@@ -1466,7 +1465,6 @@
     "        format=\"markdown\")\n",
     ")\n",
     "docs = loader.load()\n",
-    "print(docs[3].page_content)\n",
     "print(docs[5].page_content)"
    ],
    "outputs": [
