--- a/docs/docs/integrations/document_loaders/pdfplumber.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfplumber.ipynb
@@ -3,16 +3,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": ""
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": [
-    "# PdfPlumberLoader\n",
+    "# PDFPlumberLoader\n",
     "\n",
-    "\n",
-    "This notebook provides a quick overview for getting started with `PdfPlumber` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all __ModuleName__Loader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PdfPlumberLoader.html).\n",
+    "This notebook provides a quick overview for getting started with `PDFPlumber` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all __ModuleName__Loader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PDFPlumberLoader.html).\n",
     "\n",
     "<br>\n",
     "\n",
@@ -21,7 +15,7 @@
     "\n",
     "| Class | Package | Local | Serializable | JS support|\n",
     "| :--- | :--- | :---: | :---: |  :---: |\n",
-    "| [PdfPlumberLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PdfPlumberLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ | \n",
+    "| [PDFPlumberLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PDFPlumberLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ | \n",
     "\n",
     "---------   \n",
     "\n",
@@ -29,16 +23,42 @@
     "\n",
     "| Source | Document Lazy Loading | Native Async Support | Thread Safe | Extract Titles | Extract Images | Extract Tables | Extract Lists | Handle Page Header/Footer | Identify Page Break |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
-    "| PdfPlumberLoader | ✅ | ❌ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |\n",
+    "| PDFPlumberLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ✅ | ✅ | ❌ | ❌ |\n",
     "\n",
     "<br>\n",
     "\n",
-    "## Setup   \n",
-    "\n",
+    "## Setup\n",
     "\n",
     "### Credentials\n",
     "\n",
-    "No credentials are needed."
+    "No credentials are # PyPDFLoader\n",
+    "\n",
+    "This notebook provides a quick overview for getting started with `PyPDF` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all DocumentLoader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFLoader.html).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Overview\n",
+    "### Integration details\n",
+    "\n",
+    "| Class | Package | Local | Serializable | JS support|\n",
+    "| :--- | :--- | :---: | :---: |  :---: |\n",
+    "| [PyPDFLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ |   \n",
+    "   \n",
+    "---------   \n",
+    "\n",
+    "### Loader features\n",
+    "\n",
+    "| Source | Document Lazy Loading | Native Async Support | Thread Safe | Extract Titles | Extract Images | Extract Tables | Extract Lists | Handle Page Header/Footer | Identify Page Break |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "| PyPDFLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ❌ | ✅ | ❌ | ❌ |\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "### Credentials\n",
+    "\n",
+    "No credentials are required to use `PDFPlumberLoader`."
    ]
   },
   {
@@ -73,7 +93,7 @@
     }
    },
    "cell_type": "code",
-   "source": "%pip install -qU langchain_community PdfPlumber",
+   "source": "%pip install -qU langchain_community PDFPlumber",
    "outputs": [
     {
      "name": "stdout",
@@ -108,10 +128,10 @@
    "outputs": [],
    "execution_count": 3,
    "source": [
-    "from patch_langchain_community.document_loaders import PdfPlumberLoader\n",
+    "from patch_langchain_community.document_loaders import PDFPlumberLoader\n",
     "\n",
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
-    "loader = PdfPlumberLoader(file_path)"
+    "loader = PDFPlumberLoader(file_path)"
    ]
   },
   {
@@ -299,7 +319,7 @@
    ],
    "execution_count": 6,
    "source": [
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode=\"paged\",\n",
     ")\n",
@@ -331,7 +351,7 @@
    ],
    "execution_count": 7,
    "source": [
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode=\"single\",\n",
     ")\n",
@@ -989,7 +1009,7 @@
    ],
    "execution_count": 8,
    "source": [
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode=\"single\",\n",
     "    pages_delimitor=\"\\n-------THIS IS A CUSTOM END OF PAGE-------\\n\",\n",
@@ -1108,7 +1128,7 @@
    "execution_count": 9,
    "source": [
     "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_rapidocr\n",
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode='paged',\n",
     "    extract_images=True,\n",
@@ -1252,7 +1272,7 @@
    "execution_count": 10,
    "source": [
     "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_tesseract\n",
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode='paged',\n",
     "    extract_images=True,\n",
@@ -1270,11 +1290,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T17:49:55.865934Z",
-     "start_time": "2024-12-02T17:49:55.859740Z"
+     "end_time": "2024-12-02T19:45:02.616857Z",
+     "start_time": "2024-12-02T19:45:02.605163Z"
     }
    },
    "cell_type": "code",
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Charger les variables d'environnement à partir du fichier .env\n",
+    "load_dotenv()"
+   ],
    "outputs": [
     {
      "data": {
@@ -1282,55 +1309,24 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20,
-   "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "# Charger les variables d'environnement à partir du fichier .env\n",
-    "load_dotenv()"
-   ]
+   "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-02T17:52:39.458976Z",
-     "start_time": "2024-12-02T17:52:39.455506Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
-   "execution_count": 24,
+   "execution_count": null,
    "source": [
     "from getpass import getpass\n",
     "\n",
     "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
     "    os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API key =\")"
    ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "source": "",
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-02T17:50:13.613605Z",
-     "start_time": "2024-12-02T17:49:58.945111Z"
-    }
-   },
-   "cell_type": "code",
-   "outputs": [],
-   "source": "",
-   "execution_count": null
   },
   {
    "metadata": {
@@ -1400,7 +1396,7 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_description\n",
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode='paged',\n",
     "    extract_images=True,\n",
@@ -1416,7 +1412,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Extract tables from the PDF in markdown (could also be html or csv)"
+   "source": "# Extract tables from the PDF in *markdown* (could also be *html* or *csv*)"
   },
   {
    "metadata": {
@@ -1508,7 +1504,7 @@
    ],
    "execution_count": 4,
    "source": [
-    "loader = PdfPlumberLoader(\n",
+    "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     "    mode='paged',\n",
     "    extract_tables='markdown',\n",
@@ -1523,7 +1519,7 @@
    "source": [
     "## API reference\n",
     "\n",
-    "For detailed documentation of all `PdfPlumberLoader` features and configurations head to the API reference: https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PdfPlumberLoader.html"
+    "For detailed documentation of all `PDFPlumberLoader` features and configurations head to the API reference: https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PDFPlumberLoader.html"
    ]
   }
  ],
