--- a/docs/docs/integrations/document_loaders/pymupdf.ipynb
+++ b/docs/docs/integrations/document_loaders/pymupdf.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "# PyMuPDFLoader\n",
     "\n",
-    "\n",
     "This notebook provides a quick overview for getting started with `PyMuPDF` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all __ModuleName__Loader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyMuPDFLoader.html).\n",
     "\n",
     "<br>\n",
@@ -24,16 +23,15 @@
     "\n",
     "| Source | Document Lazy Loading | Native Async Support | Thread Safe | Extract Titles | Extract Images | Extract Tables | Extract Lists | Handle Page Header/Footer | Identify Page Break |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
-    "| PyMuPDFLoader | ✅ | ❌ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |\n",
+    "| PyMuPDFLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ✅ | ✅ | ❌ | ❌ |\n",
     "\n",
     "<br>\n",
     "\n",
-    "## Setup   \n",
-    "\n",
+    "## Setup\n",
     "\n",
     "### Credentials\n",
     "\n",
-    "No credentials are needed."
+    "No credentials are required to use PyMuPDFLoader"
    ]
   },
   {
@@ -1309,25 +1307,6 @@
    ]
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "source": "",
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-02T17:50:13.613605Z",
-     "start_time": "2024-12-02T17:49:58.945111Z"
-    }
-   },
-   "cell_type": "code",
-   "outputs": [],
-   "source": "",
-   "execution_count": null
-  },
-  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-02T17:52:36.046305Z",
@@ -1411,7 +1390,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Extract tables from the PDF in markdown (could also be html or csv)"
+   "source": "# Extract tables from the PDF in *markdown* (could also be *html* or *csv*)"
   },
   {
    "metadata": {
