--- a/docs/docs/integrations/document_loaders/pypdfium2.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfium2.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# PyPDFium2Loader\n",
     "\n",
-    "\n",
-    "This notebook provides a quick overview for getting started with `PyPDFium2` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all __ModuleName__Loader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFium2Loader.html).\n",
+    "This notebook provides a quick overview for getting started with `PyPDFium2` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all DocumentLoader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFium2Loader.html).\n",
     "\n",
     "<br>\n",
     "\n",
@@ -28,12 +27,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "## Setup   \n",
-    "\n",
+    "## Setup\n",
     "\n",
     "### Credentials\n",
     "\n",
-    "No credentials are needed."
+    "No credentials are required to use `PyPDFium2Loader`."
    ]
   },
   {
@@ -63,12 +61,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T18:54:31.037512Z",
-     "start_time": "2024-12-02T18:54:26.082651Z"
+     "end_time": "2024-12-02T20:35:00.664391Z",
+     "start_time": "2024-12-02T20:34:56.674035Z"
     }
    },
    "cell_type": "code",
-   "source": "%pip install -qU langchain_community pymupdf",
+   "source": "%pip install -qU langchain_community pypdfium2",
    "outputs": [
     {
      "name": "stdout",
@@ -81,7 +79,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -1309,25 +1307,6 @@
    "execution_count": 24
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-02T17:50:13.613605Z",
-     "start_time": "2024-12-02T17:49:58.945111Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "outputs": [],
-   "execution_count": 21
-  },
-  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-02T17:52:36.046305Z",
@@ -1348,7 +1327,6 @@
     "        format=\"markdown\")\n",
     ")\n",
     "docs = loader.load()\n",
-    "print(docs[3].page_content)\n",
     "print(docs[5].page_content)"
    ],
    "outputs": [
