--- a/docs/docs/integrations/document_loaders/pypdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfloader.ipynb
@@ -13,7 +13,6 @@
     "## Overview\n",
     "### Integration details\n",
     "\n",
-    "\n",
     "| Class | Package | Local | Serializable | JS support|\n",
     "| :--- | :--- | :---: | :---: |  :---: |\n",
     "| [PyPDFLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ |   \n",
@@ -48,6 +47,15 @@
    "source": [
     "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
     "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Installation\n",
+    "\n",
+    "Install **langchain_community**."
    ]
   },
   {
@@ -93,10 +101,10 @@
     }
    },
    "source": [
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "loader = PyPDFLoader(\n",
-    "    \"./example_data/layout-parser-paper.pdf\",\n",
-    ")"
+    "from patch_langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
+    "loader = PyPDFLoader(file_path)"
    ],
    "outputs": [],
    "execution_count": 24
@@ -1007,11 +1015,6 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": ""
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": "## Extract images from the PDF in *html* format (could also be *markdown* or *text*) with rapid OCR: "
   },
   {
@@ -1120,8 +1123,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T10:28:10.293195Z",
-     "start_time": "2024-11-28T10:27:57.735595Z"
+     "end_time": "2024-12-02T20:17:27.806364Z",
+     "start_time": "2024-12-02T20:17:27.785028Z"
     }
    },
    "cell_type": "code",
@@ -1138,94 +1141,18 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 Z. Shen et al.\n",
-      "Fig. 2: The relationship between the three types of layout data structures.\n",
-      "Coordinate supports three kinds of variation; TextBlock consists of the co-\n",
-      "ordinate information and extra features like block text, types, and reading orders;\n",
-      "a Layout object is a list of all possible layout elements, including other Layout\n",
-      "objects. They all support the same set of transformation and operation APIs for\n",
-      "maximum ﬂexibility.\n",
-      "Shown in Table 1, LayoutParser currently hosts 9 pre-trained models trained\n",
-      "on 5 diﬀerent datasets. Description of the training dataset is provided alongside\n",
-      "with the trained models such that users can quickly identify the most suitable\n",
-      "models for their tasks. Additionally, when such a model is not readily available,\n",
-      "LayoutParser also supports training customized layout models and community\n",
-      "sharing of the models (detailed in Section 3.5).\n",
-      "3.2 Layout Data Structures\n",
-      "A critical feature of LayoutParser is the implementation of a series of data\n",
-      "structures and operations that can be used to eﬃciently process and manipulate\n",
-      "the layout elements. In document image analysis pipelines, various post-processing\n",
-      "on the layout analysis model outputs is usually required to obtain the ﬁnal\n",
-      "outputs. Traditionally, this requires exporting DL model outputs and then loading\n",
-      "the results into other pipelines. All model outputs from LayoutParser will be\n",
-      "stored in carefully engineered data types optimized for further processing, which\n",
-      "makes it possible to build an end-to-end document digitization pipeline within\n",
-      "LayoutParser. There are three key components in the data structure, namely\n",
-      "the Coordinate system, the TextBlock, and the Layout. They provide diﬀerent\n",
-      "Coordinate\n",
-      "\n",
-      "textblock\n",
-      "\n",
-      "x-interval\n",
-      "\n",
-      " \n",
-      "\n",
-      "JeAsaqul-A\n",
-      "\n",
-      "Coordinate\n",
-      "+\n",
-      "\n",
-      "Extra features\n",
-      "\n",
-      "Rectangle\n",
-      "\n",
-      "Quadrilateral\n",
-      "\n",
-      " \n",
-      "\n",
-      "Block\n",
-      "Text\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      "Block\n",
-      "Type\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      "Reading\n",
-      "Order\n",
-      "\n",
-      " \n",
-      "\n",
-      " \n",
-      "\n",
-      "layout\n",
-      "\n",
-      "[ coordinatel textblock1 |\n",
-      "'\n",
-      "\n",
-      "“y textblock2 , layout1 ]\n",
-      "\n",
-      "A list of the layout elements\n",
-      "\n",
-      "The same transformation and operation APIs\n",
-      "\n",
-      "levels of abstraction for the layout data, and a set of APIs are supported for\n",
-      "transformations or operations on these classes.\n"
+     "ename": "TypeError",
+     "evalue": "PyPDFLoader.__init__() got an unexpected keyword argument 'mode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[29], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mpatch_langchain_community\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdocument_loaders\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mparsers\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpdf\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m convert_images_to_text_with_tesseract\n\u001B[0;32m----> 2\u001B[0m loader \u001B[38;5;241m=\u001B[39m \u001B[43mPyPDFLoader\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m      3\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m./example_data/layout-parser-paper.pdf\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      4\u001B[0m \u001B[43m    \u001B[49m\u001B[43mmode\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mpaged\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m    \u001B[49m\u001B[43mextract_images\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[43m    \u001B[49m\u001B[43mimages_to_text\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconvert_images_to_text_with_tesseract\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mformat\u001B[39;49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mtext\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m)\u001B[49m\n\u001B[1;32m      8\u001B[0m docs \u001B[38;5;241m=\u001B[39m loader\u001B[38;5;241m.\u001B[39mload()\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28mprint\u001B[39m(docs[\u001B[38;5;241m5\u001B[39m]\u001B[38;5;241m.\u001B[39mpage_content)\n",
+      "\u001B[0;31mTypeError\u001B[0m: PyPDFLoader.__init__() got an unexpected keyword argument 'mode'"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -1281,7 +1208,7 @@
     "from getpass import getpass\n",
     "\n",
     "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = getpass()\n"
+    "    os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API key =\")"
    ],
    "outputs": [],
    "execution_count": 12
@@ -1307,7 +1234,6 @@
     "        format=\"markdown\")\n",
     ")\n",
     "docs = loader.load()\n",
-    "print(docs[3].page_content)\n",
     "print(docs[5].page_content)"
    ],
    "outputs": [
