notebooks pour master ajout commande run_notebooks

--- a/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PyPDFDirectoryLoader\n",
+    "# PyPDFDirectoryLoader (Deprecated)\n",
+    "\n",
+    "Note: This loader is deprecated. Please use [GenericLoader](https://python.langchain.com/docs/how_to/document_loader_custom/#overview) instead.\n",
+    "\n",
+    "<br>\n",
     "\n",
     "This loader loads all PDF files from a specific directory.\n",
     "\n",
@@ -57,10 +61,18 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "%pip install -qU langchain_community"
+    "%%capture\n",
+    "%pip install -qU langchain_community pypdf pillow"
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "%pip install -qU ../../../../dist/patch_langchain_pdf_loader-0.0.0-py3-none-any.whl"
   },
   {
    "cell_type": "markdown",
