add check_template Fix lint

--- a/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
@@ -79,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using PDFMiner to generate HTML text - Initialization\n",
+    "## Initialisation\n",
     "\n",
     "This can be helpful for chunking texts semantically into sections as the output html content can be parsed via `BeautifulSoup` to get more structured and rich information about font size, page numbers, PDF headers / footers, etc. Now we can instantiate our model object and load documents:"
    ]
