align integration doc pdfminer and pdfminer_fasthtml with template

--- a/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
@@ -79,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -90,12 +90,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## Using PDFMiner to generate HTML text - Initialization\n",
+    "## Initialization\n",
     "\n",
-    "This can be helpful for chunking texts semantically into sections as the output html content can be parsed via `BeautifulSoup` to get more structured and rich information about font size, page numbers, PDF headers / footers, etc. Now we can instantiate our model object and load documents:"
+    "Now we can instantiate our model object and load documents:"
    ]
   },
   {
@@ -124,9 +124,66 @@
     "\n",
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PDFMinerPDFasHTMLLoader(file_path)\n",
-    "docs = loader.load()\n",
-    "docs[0]\n"
+    "\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Load"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "docs = loader.load()\n",
+    "docs[0]"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Lazy Load\n"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:38:45.731534Z",
+     "start_time": "2024-12-04T17:38:45.036761Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6,
+   "source": [
+    "pages = []\n",
+    "for doc in loader.lazy_load():\n",
+    "    pages.append(doc)\n",
+    "    if len(pages) >= 10:\n",
+    "        # do some paged operation, e.g.\n",
+    "        # index.upsert(page)\n",
+    "\n",
+    "        pages = []\n",
+    "len(pages)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Here we are using PDFMiner to generate HTML text. This can be helpful for chunking texts semantically into sections as the output html content can be parsed via `BeautifulSoup` to get more structured and rich information about font size, page numbers, PDF headers / footers, etc. "
   },
   {
    "cell_type": "code",
